--- a/server/src/main/resources/public/index.html
+++ b/server/src/main/resources/public/index.html
@@ -7,11 +7,22 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="/css/style.css">
 		<link rel="icon" href="http://www.freeiconspng.com/uploads/face-deadpool-icon-png-4.png">
+		<script src="/js/login.js"></script>
 	</head>
 <body background="http://static.alphacoders.com/desktops/4665.jpg">
 </body>
 	<body>
-		<div id = 'app'></div>
-		<script type="text/javascript" src = '/js/app.js'></script>
+		<div id = 'app'>
+		</div>
+		<div id="loginFormDiv">
+			<form id="loginForm">
+  				<p><b>Your name:</b><br/>
+   					<input type="text" size="40" name="username"/>
+   					<input type="text" name="password" />
+   					<input type="hidden" name="remember-me" value="yes"/>
+  				</p>
+  				<p><input type="submit" value="Enter"/></p>
+ 			</form>
+		</div>
 	</body>
 </html>
