--- a/server/src/main/resources/public/index.html
+++ b/server/src/main/resources/public/index.html
@@ -1,28 +1,43 @@
 <html>
 	<head>
-		<meta charset="UTF-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="/css/style.css">
+		<link rel="stylesheet" href="/css/login.css">
 		<link rel="icon" href="http://www.freeiconspng.com/uploads/face-deadpool-icon-png-4.png">
 		<script src="/js/login.js"></script>
 	</head>
 <body background="http://static.alphacoders.com/desktops/4665.jpg">
 </body>
 	<body>
-		<div id = 'app'>
+		<div id = 'app' class="display-no">
 		</div>
-		<div id="loginFormDiv">
-			<form id="loginForm">
-  				<p><b>Your name:</b><br/>
-   					<input type="text" size="40" name="username"/>
-   					<input type="text" name="password" />
-   					<input type="hidden" name="remember-me" value="yes"/>
-  				</p>
-  				<p><input type="submit" value="Enter"/></p>
- 			</form>
+		<div id="loginFormDiv"  class="container container-table">
+			<div class="row vertical-center-row">
+				<div>
+					<form id="loginForm">
+						<div class="form-group">
+							<label for="form-login" class="form-label">Логин</label>
+							<input type="text" size="40" name="username" id="form-login" class="form-control"/>
+						</div>
+						<div class="form-group">
+							<label for="form-password" class="form-label">Пароль</label>
+							<input type="password" name="password" id="form-password" class="form-control" />
+							<input type="hidden" name="remember-me" value="yes"/>
+						</div>
+						<div class="row wrapper-btn-submit wrap-content">
+							<button type="submit" class="btn btn-success"/>Войти</button>
+						</div>
+						<div class="row display-no login-failure wrap-content">
+							Неверно указан логин или пароль...
+						</div>
+					</form>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
